# khaya-ai-mcp

ghananlp-mcp/: LICENSE  README.md  pyproject.toml
ghananlp-mcp-cloudflare/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
ghananlp-mcp-cloudflare/src/: index.ts
ghananlp-mcp/examples/: claude_desktop_config.json  example_usage.py
ghananlp-mcp/src/ghananlp_mcp/: __init__.py  server.py
ghananlp-mcp/tests/: __init__.py  test_server.py
