[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghananlp-mcp"
version = "1.0.0"
description = "MCP Server for GhanaNLP APIs - Translation, ASR (Speech-to-Text), and TTS (Text-to-Speech)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GhanaNLP MCP", email = "info@ghananlp.org" }
]
keywords = ["mcp", "ghananlp", "translation", "asr", "tts", "african-languages", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
ghananlp-mcp = "ghananlp_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ghananlp_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
